adds clarification to 'best route' button regarding no movement

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -489,15 +489,23 @@
       "5cfd5e36be024: They wandered around for a bit before asking, but otherwise asked pretty well.\n",
       "5cfd5da427022: They never said anything, so I couldn't do anything.\n",
       "5cfd5daab01cc: I had a strong idea of where the room was based on their comment.\n",
-      "5cfd8f14db630: Too bad I couldn't get a partner, this seems like it really would have been fun.\n",
-      "5cfd81afe391e: no one sadly connected\n",
       "5cfd6b84b33ac: It was easy but my partner and I understood eachother so maybe that's not always the case\n",
       "5cfd6bd174a0b: this was fun\n",
-      "5cfd8ccba8114: i tried to reload many times but never could get it to work with a partner\n",
       "5cfd729b21a0e: He took up almost all of my time! Yeesh, not a good partner.\n",
       "5cfd72052692c: This was ridiculous.  That wasn't a bathtub it was a shower.  And this hit was grossly underpaid.  Thanks for wasting my time.\n",
-      "5cfd7ba63781c: Thank you.\n",
-      "5cfd7a5d7a420: hey I can wait a little longer.\n"
+      "5d016fe0ad042: It was hard to type into the interface. It drops character unless you type slow and hard.\n",
+      "5d0167607eb0b: they were a bit blunt which didnt help much\n",
+      "5d01675c7b713: I don't think the hint was very good.\n",
+      "5d01694daf191: We worked well together but I would think of a bookcase as a \"bookcase\" with books in it.\n",
+      "5d01690491008: Very fun and interesting task!\n",
+      "5d016cd6c8ba1: Once my partner understood how to navigate and that I couldn't say anything unless I was asked a question, it went smoothly.\n",
+      "5d016cbf5200e: I had the best partner they were awesome\n",
+      "5d0167769e717: It said it was the room with the tv, but it was just next to the room with the tv.\n",
+      "5d016783e82c0: They only had an issue at the end, where they were confident we were looking for the room with THE TV and not a room with A TV.\n",
+      "5d016b3d75cd2: I passed this room before and partner was giving incorrect instructions.\n",
+      "5d01678f72fe7: The map was extremely slow to respond to my clicks.\n",
+      "5d0167867d54f: My video loaded slowly, so it was frustrating.  BUT, this was FUN!!!!!!!\n",
+      "5d016e35c998f: n/a\n"
      ]
     }
    ],
@@ -510,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +526,7 @@
      "output_type": "stream",
      "text": [
       "house wc2JMjhGNzB, target bathtub, dialog len 10, nav len 37, success: True\n",
-      "navigator quality: 5, oracle quality: 5\n",
+      "navigator quality: 2, oracle quality: 5\n",
       "\t[7] navigator(5cfd5de1c26d1):\tShould I go to the right or to the left through the door ahead?\n",
       "\t[7] oracle(5cfd5e36be024):\tThe right\n",
       "\t[9] navigator(5cfd5de1c26d1):\tShould I go to the left or to the right?\n",
@@ -531,7 +539,7 @@
       "\t[30] oracle(5cfd5e36be024):\tGo left and keep going that way until you get to the bedroom. It\"s in the adjoined room to the bedroom.\n",
       "\n",
       "house 17DRP5sb8fy, target toiletpaper, dialog len 0, nav len 10, success: True\n",
-      "navigator quality: 1, oracle quality: 1\n",
+      "navigator quality: 1, oracle quality: 4\n",
       "\n",
       "house 17DRP5sb8fy, target sink, dialog len 10, nav len 20, success: True\n",
       "navigator quality: 5, oracle quality: 5\n",
@@ -547,7 +555,7 @@
       "\t[17] oracle(5cfd6bd174a0b):\tfound it :)\n",
       "\n",
       "house wc2JMjhGNzB, target bathtub, dialog len 18, nav len 131, success: True\n",
-      "navigator quality: 2, oracle quality: 2\n",
+      "navigator quality: 4, oracle quality: 2\n",
       "\t[8] navigator(5cfd72052692c):\tI guess I\"ve left the original bathroom I was in, and made a few right turns into a hallway\n",
       "\t[8] oracle(5cfd729b21a0e):\tFind the other bathroom with a tub, out that hallway and to the left through the main room, that\"s all I know\n",
       "\t[42] navigator(5cfd72052692c):\tlol i think i\"m lost\n",
@@ -567,55 +575,109 @@
       "\t[126] navigator(5cfd72052692c):\tok i\"m there.  if i don\"t find it after this next turn, I\"m submitting using my id.\n",
       "\t[126] oracle(5cfd729b21a0e):\tthat small bathroom to your left, look at the shower/tub\n",
       "\n",
-      "house wc2JMjhGNzB, target bathtub, dialog len 18, nav len 131, success: True\n",
-      "navigator quality: 4, oracle quality: 4\n",
-      "\t[8] navigator(5cfd72052692c):\tI guess I\"ve left the original bathroom I was in, and made a few right turns into a hallway\n",
-      "\t[8] oracle(5cfd729b21a0e):\tFind the other bathroom with a tub, out that hallway and to the left through the main room, that\"s all I know\n",
-      "\t[42] navigator(5cfd72052692c):\tlol i think i\"m lost\n",
-      "\t[42] oracle(5cfd729b21a0e):\tIt just shows going back to that main entrance. I dunno, it could be one of those weird bedrooms with a tub in it. Maybe upstairs on the other side. Or towards back of the entrance room.\n",
-      "\t[68] navigator(5cfd72052692c):\tok its the big room upstairs, the master bedroom\n",
-      "\t[68] oracle(5cfd729b21a0e):\tNot that one, it\"s showing another flight of stairs up\n",
-      "\t[68] navigator(5cfd72052692c):\ti mean i\"m in here with a tub\n",
-      "\t[68] oracle(5cfd729b21a0e):\tThat\"s not the tub, apparently. It\"s showing going back to the stairs, and there\"s another story.\n",
-      "\t[87] navigator(5cfd72052692c):\tok there\"s wasn\"t another room upstairs. I\"m back in the other room with the tub now. maybe it will show I\"m in the correct room now that I\"m at a different blue dot.  this is top 5 annoying hits, better be a bonus\n",
-      "\t[87] oracle(5cfd729b21a0e):\tBack to the stairs again, it says. Try clicking around the tub, I dunno what\"s on your screen. Otherwise, go back and stop and stare at the stairs going up and I\"ll see what it says.\n",
-      "\t[88] navigator(5cfd72052692c):\tok I\"m at a different spot.  I can guarantee there wasn\"t a tub up the stairs.  If this doesn\"t work I\"mma say I found the room\n",
-      "\t[88] oracle(5cfd729b21a0e):\tYeah, I mean it just shows you staring at the stairs again. If you got a button for found the room, look at the tub and press it. hah. All I have is a best route button and it shows your perspective going and staring at the stairs.\n",
-      "\t[88] navigator(5cfd72052692c):\tok just switch to my turn and i\"ll keep looking\n",
-      "\t[88] oracle(5cfd729b21a0e):\tk, stop right before you enter the staircase room and look at it\n",
-      "\t[109] navigator(5cfd72052692c):\twas it up the stairs?\n",
-      "\t[109] oracle(5cfd729b21a0e):\tStop right in front of the flight of stairs on second level\n",
-      "\t[126] navigator(5cfd72052692c):\tok i\"m there.  if i don\"t find it after this next turn, I\"m submitting using my id.\n",
-      "\t[126] oracle(5cfd729b21a0e):\tthat small bathroom to your left, look at the shower/tub\n",
+      "house zsNo4HB9uLZ, target sofa, dialog len 4, nav len 31, success: True\n",
+      "navigator quality: 5, oracle quality: 4\n",
+      "\t[1] navigator(5d016fcc0b2b7):\thello oracle, how to proceed\n",
+      "\t[1] oracle(5d016fe0ad042):\tGo left into bathroom, right into bedroom, then right into hallway.\n",
+      "\t[13] navigator(5d016fcc0b2b7):\thave we found the room?\n",
+      "\t[13] oracle(5d016fe0ad042):\tGood so far. Turn around and go left behind bar with stools and through narrow pantry to end near bedroom. This is all they show me so far..\n",
       "\n",
-      "house 17DRP5sb8fy, target sink, dialog len 10, nav len 20, success: True\n",
+      "house 29hnd4uzFmX, target box, dialog len 12, nav len 38, success: True\n",
+      "navigator quality: 3, oracle quality: 3\n",
+      "\t[7] navigator(5d0167607eb0b):\tam i close? i cannot seem to leave the rom\n",
+      "\t[7] oracle(5d01675c7b713):\tGo through the door you are looking at and turn left\n",
+      "\t[11] navigator(5d0167607eb0b):\tis this the correct room?there is no box\n",
+      "\t[11] oracle(5d01675c7b713):\tLeave the room and go down the stairs\n",
+      "\t[17] navigator(5d0167607eb0b):\tokay\n",
+      "\t[17] oracle(5d01675c7b713):\tKeep looking\n",
+      "\t[29] navigator(5d0167607eb0b):\tno offense but that does not help much.i looked all over\n",
+      "\t[29] oracle(5d01675c7b713):\tThe Best Route is freezing on me so I think this is the room.\n",
+      "\t[29] navigator(5d0167607eb0b):\tit says i am not there\n",
+      "\t[29] oracle(5d01675c7b713):\tHave you even tried right clicking?\n",
+      "\t[32] navigator(5d0167607eb0b):\tyes. does the path appear now?\n",
+      "\t[32] oracle(5d01675c7b713):\tThe path keeps going back to the kitchen\n",
+      "\n",
+      "house pRbA3pwrgk9, target bookcase, dialog len 8, nav len 27, success: True\n",
       "navigator quality: 5, oracle quality: 5\n",
-      "\t[1] navigator(5cfd6b84b33ac):\tWhere should I go first?\n",
-      "\t[1] oracle(5cfd6bd174a0b):\tstraight ahead then to the right\n",
-      "\t[6] navigator(5cfd6b84b33ac):\tI see the bed and bedroom\n",
-      "\t[6] oracle(5cfd6bd174a0b):\ttoward the bed then right again\n",
-      "\t[9] navigator(5cfd6b84b33ac):\tI am at the entrance to a livingroom with a large couch\n",
-      "\t[9] oracle(5cfd6bd174a0b):\tthrough the living room into the dining room\n",
-      "\t[14] navigator(5cfd6b84b33ac):\tOk, in the dining room\n",
-      "\t[14] oracle(5cfd6bd174a0b):\tthrough dining room it is the room straight ahead\n",
-      "\t[17] navigator(5cfd6b84b33ac):\tI am looking at what looks like a bathroom ahead and a rec room on the left\n",
-      "\t[17] oracle(5cfd6bd174a0b):\tfound it :)\n",
+      "\t[7] navigator(5d01690491008):\tShould I go left down the hall to the other room, or down the stairs to the right?\n",
+      "\t[7] oracle(5d01694daf191):\tYou should go up the stairs\n",
+      "\t[14] navigator(5d01690491008):\tDo I continue up the stairs, left to another bedroom, or forward to another bedroom?\n",
+      "\t[14] oracle(5d01694daf191):\tContinue going up the stairs\n",
+      "\t[24] navigator(5d01690491008):\tForward to living room, or up spiral stairs?\n",
+      "\t[24] oracle(5d01694daf191):\tYou turn to your left and go over towards the kitchen.  That might be the bookcase.\n",
+      "\t[26] navigator(5d01690491008):\tIs that the bookcase with the glasses, or do I need to keep looking?\n",
+      "\t[26] oracle(5d01694daf191):\tIt isn\"t giving me any more directions so I guess that is the bookcase with the glasses\n",
       "\n",
-      "house wc2JMjhGNzB, target bathtub, dialog len 10, nav len 37, success: True\n",
-      "navigator quality: 2, oracle quality: 2\n",
-      "\t[7] navigator(5cfd5de1c26d1):\tShould I go to the right or to the left through the door ahead?\n",
-      "\t[7] oracle(5cfd5e36be024):\tThe right\n",
-      "\t[9] navigator(5cfd5de1c26d1):\tShould I go to the left or to the right?\n",
-      "\t[9] oracle(5cfd5e36be024):\tI think you can only go left\n",
-      "\t[22] navigator(5cfd5de1c26d1):\tWhich direction should I turn next?\n",
-      "\t[22] oracle(5cfd5e36be024):\tRight\n",
-      "\t[25] navigator(5cfd5de1c26d1):\tNow where should I go?\n",
-      "\t[25] oracle(5cfd5e36be024):\tGo straight until you run into the paintings at the end of the hall.\n",
-      "\t[30] navigator(5cfd5de1c26d1):\tOkay, should I turn left or right this time?\n",
-      "\t[30] oracle(5cfd5e36be024):\tGo left and keep going that way until you get to the bedroom. It\"s in the adjoined room to the bedroom.\n",
+      "house 5q7pvUzZiYa, target rug, dialog len 10, nav len 36, success: True\n",
+      "navigator quality: 5, oracle quality: 5\n",
+      "\t[1] navigator(5d016cbf5200e):\tI\"m sorry I can\"t navagate this\n",
+      "\t[1] oracle(5d016cd6c8ba1):\tyou didn\"t read the directions. do you see blue cylinders around the room? right click on them\n",
+      "\t[4] navigator(5d016cbf5200e):\tOK, but can you give me directions, that does work thanks.\n",
+      "\t[4] oracle(5d016cd6c8ba1):\tOk, the \"best route\" it\"s showing me is to go downstairs. I personally can\"t see the cylinders to tell you which ones to click on\n",
+      "\t[17] navigator(5d016cbf5200e):\tI am going down the stairs, take a left then go into the room with the bed\n",
+      "\t[17] oracle(5d016cd6c8ba1):\tOk, it\"s telling me the next step is to go down that narrow hallway just to the left of the bedroom, and go down the next set of stairs at the end of that hallway\n",
+      "\t[17] navigator(5d016cbf5200e):\tI found a room with a rug in it guess it\"s too soon\n",
+      "\t[17] oracle(5d016cd6c8ba1):\tYes, I see that rug too. I guess it isn\"t the one the system wants. Follow the directions I just gave you in the last round.\n",
+      "\t[29] navigator(5d016cbf5200e):\tI think I found it it\"s got a big outside opening\n",
+      "\t[29] oracle(5d016cd6c8ba1):\tha, no, it\"s finally showing me the full destination. I guess it thinks those are mats. turn around 180 degrees, and keep going left inside the house. it\"s like 2 rooms away\n",
       "\n",
-      "house 17DRP5sb8fy, target toiletpaper, dialog len 0, nav len 10, success: True\n",
-      "navigator quality: 4, oracle quality: 4\n",
+      "house SN83YJsR3w2, target tv, dialog len 20, nav len 50, success: True\n",
+      "navigator quality: 3, oracle quality: 5\n",
+      "\t[1] navigator(5d0167769e717):\tShould I go straight to the end of the room, or turn around and walk the other direction?\n",
+      "\t[1] oracle(5d016783e82c0):\tGo straight forward and then go left. Then walk forward until you reach some shelving\n",
+      "\t[6] navigator(5d0167769e717):\tShould I go forward through the green door or turn left towards the stairs?\n",
+      "\t[6] oracle(5d016783e82c0):\tGo towards and up the stairs till you get to the entrance to the room at the top.\n",
+      "\t[13] navigator(5d0167769e717):\tDo I go straight into the room to the door on the left or do I turn right after I get in the room?\n",
+      "\t[13] oracle(5d016783e82c0):\tGo into the room and turn left, then head into a kitchen and turn left again.\n",
+      "\t[19] navigator(5d0167769e717):\tDo I go down the hallway our of the kitchen or go in one of the doors?\n",
+      "\t[19] oracle(5d016783e82c0):\tGo slightly into the hallway and up the stairs on your left, go till you reach the top\n",
+      "\t[28] navigator(5d0167769e717):\tDo I turn left and go through one of the doors on the left or right and one of the doors on the right?\n",
+      "\t[28] oracle(5d016783e82c0):\tYou go left, then immediately left again, then forward a bit and right into a room with a dark wooded staircase\n",
+      "\t[33] navigator(5d0167769e717):\tDO I go down the staircase or into one of the rooms?\n",
+      "\t[33] oracle(5d016783e82c0):\tJust go straight forward to the room directly in front of you\n",
+      "\t[39] navigator(5d0167769e717):\tI see the tv. I am going to click found room.\n",
+      "\t[39] oracle(5d016783e82c0):\tNo go to your right to the room over there\n",
+      "\t[40] navigator(5d0167769e717):\tI am in a room that has a tv.\n",
+      "\t[40] oracle(5d016783e82c0):\tThis is not the TV room, there can be more than one room with a TV. Go straight forward\n",
+      "\t[43] navigator(5d0167769e717):\tOkay, now I am in a room with windows and books and nothing else. Should I go outside or through the doors.\n",
+      "\t[43] oracle(5d016783e82c0):\tI can no longer click on \"Show Best Route\" I presume this is the room, or there has been some kind of bug\n",
+      "\t[46] navigator(5d0167769e717):\tI am back in the room with the tv but it says it is not in the room... can you do anything else?\n",
+      "\t[46] oracle(5d016783e82c0):\tIt still has me in the dark room with windows and books, are you sure that that is not the room?\n",
+      "\n",
+      "house Vvot9Ly1tCj, target cushion, dialog len 16, nav len 48, success: True\n",
+      "navigator quality: 4, oracle quality: 2\n",
+      "\t[3] navigator(5d016b3d75cd2):\tI\"m starting in a garage and am by the laundry area when I entered the house.  Should I go through the door to the right or straight ahead?\n",
+      "\t[3] oracle(5d016b95cd05b):\tGo to the door to the right.\n",
+      "\t[6] navigator(5d016b3d75cd2):\tI am in a bedroom with a desk, chair without arms 2 beds and cushions.  Is this the correct room, or should I go through the other door?\n",
+      "\t[6] oracle(5d016b95cd05b):\tYou have to go through the other door which which will give you the best route to get outside.\n",
+      "\t[9] navigator(5d016b3d75cd2):\tOne door is a closet, the other door is a bathroom.  Should I go back out of the bedroom? I don\"t see any other options.\n",
+      "\t[9] oracle(5d016b95cd05b):\tYou have to get back out of the bedroom first.\n",
+      "\t[13] navigator(5d016b3d75cd2):\tin the kitchen/dining area.  Should I go further down the hall?\n",
+      "\t[13] oracle(5d016b95cd05b):\tGo further down the hall to the living room area.\n",
+      "\t[34] navigator(5d016b3d75cd2):\tOk found the living room area with 2 couches and 2 side chairs with cushions.  There are 3 lights attached to the ceiling.  Cushions on couches.  Is this the correct room?\n",
+      "\t[34] oracle(5d016b95cd05b):\tYou need to go to the room with the black mat on the floor by the door.\n",
+      "\t[39] navigator(5d016b3d75cd2):\tThere is a black mat on the floor by an open door here.\n",
+      "\t[39] oracle(5d016b95cd05b):\tGo in that room with the mat and the white tile floor.\n",
+      "\t[42] navigator(5d016b3d75cd2):\tOk there is a settee with 2 cushions on it, grayish/white tile, looks like a patio\n",
+      "\t[42] oracle(5d016b95cd05b):\tKeep going until you get outside and see the pool\n",
+      "\t[45] navigator(5d016b3d75cd2):\tNow I am in an outdoor kitchen area with a couch, tan rug, passed the pool.\n",
+      "\t[45] oracle(5d016b95cd05b):\tYou need to be by the black mat right next to the pool that says GI HOMES.\n",
+      "\n",
+      "house VLzqgDo317F, target candle, dialog len 6, nav len 26, success: True\n",
+      "navigator quality: 4, oracle quality: 3\n",
+      "\t[1] navigator(5d01678f72fe7):\thi, i am to find the room w/ the candle\n",
+      "\t[1] oracle(5d0167867d54f):\tGo forward and turn right on the red carpet\n",
+      "\t[7] navigator(5d01678f72fe7):\tshould I keep walking past the marble steps?\n",
+      "\t[7] oracle(5d0167867d54f):\tNo. Take the staircase on the right.\n",
+      "\t[14] navigator(5d01678f72fe7):\tmap is really laggy :( , should I go to the right/left hallway?\n",
+      "\t[14] oracle(5d0167867d54f):\tGo to the left hallway, all the way down, and go into the room on the left.\n",
+      "\n",
+      "house Vvot9Ly1tCj, target lamp, dialog len 4, nav len 19, success: True\n",
+      "navigator quality: 5, oracle quality: 5\n",
+      "\t[2] navigator(5d016e35c998f):\twhat type of room is it\n",
+      "\t[2] oracle(5d016e3153439):\twhite sofa and glass outdoors\n",
+      "\t[10] navigator(5d016e35c998f):\tshould i go stragiht?\n",
+      "\t[10] oracle(5d016e3153439):\tgo through the kitchen down the hall and into the bedroom\n",
       "\n"
      ]
     }
