adds infrastructure for language fertility

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -466,6 +466,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_to_count_dict(tks, d):\n",
+    "    for tk in tks:\n",
+    "        if tk not in d:\n",
+    "            d[tk] = 0\n",
+    "        d[tk] += 1\n",
+    "\n",
+    "import spacy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Process language into structures.\n",
+    "all_wc = {}\n",
+    "nav_wc = {}\n",
+    "ora_wc = {}\n",
+    "len_at_nav_turn = [0] * MAX_NAV_LEN\n",
+    "count_at_nav_turn = [0] * MAX_NAV_LEN\n",
+    "len_at_dialog_turn = [0] * MAX_DIALOG_LEN\n",
+    "count_at_dialog_turn = [0] * MAX_DIALOG_LEN\n",
+    "for idx in games.index:\n",
+    "    if not games['success'][idx]:\n",
+    "        continue\n",
+    "    for tidx in range(games['num_dialog_turns'][idx]):\n",
+    "        turn = games['dialog_history'][idx][tidx]\n",
+    "        tks = [(tk.text.lower().strip(), tk.pos_) for tk in nlp(turn['message'])]\n",
+    "        tks = [(tk_s, tk_pos) for (tk_s, tk_pos) in tks if len(tk_s) > 0]\n",
+    "        add_to_count_dict(tks, all_wc)\n",
+    "        if turn['role'] == 'navigator':\n",
+    "            add_to_count_dict(tks, nav_wc)\n",
+    "        else:\n",
+    "            add_to_count_dict(tks, ora_wc)\n",
+    "        len_at_nav_turn[turn['nav_idx']] += len(tks)\n",
+    "        count_at_nav_turn[turn['nav_idx']] += 1\n",
+    "        len_at_dialog_turn[tidx] += len(tks)\n",
+    "        count_at_dialog_turn[tidx] += 1\n",
+    "len_at_nav_turn = [len_at_nav_turn[idx] / count_at_nav_turn[idx] if count_at_nav_turn[idx] > 0 else 0\n",
+    "                   for idx in range(MAX_NAV_LEN)]\n",
+    "len_at_dialog_turn = [len_at_dialog_turn[idx] / count_at_dialog_turn[idx] if count_at_dialog_turn[idx] > 0 else 0\n",
+    "                      for idx in range(MAX_DIALOG_LEN)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
