converted instruction following task to look like R2R task files

--- a/web/chat/scripts/examine_task_tuples.ipynb
+++ b/web/chat/scripts/examine_task_tuples.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -216,18 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load instruction following data.\n",
     "with open(instruction_following_fn, 'r') as f:\n",
-    "    ins_follow = pd.read_json(json.load(f))"
+    "    ins_follow = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
     "# Examine distribution of instruction following lengths versus MatterPort.\n",
     "bin_size = 1\n",
     "\n",
-    "ins_ds = [len(ins_follow['planner_steps'][idx]) for idx in ins_follow.index]\n",
+    "ins_ds = [len(task['planner_path']) for task in ins_follow]\n",
     "freq_of_ins_ds_count_bins = {}\n",
     "for c in ins_ds:\n",
     "    cbin = c // bin_size\n",
@@ -262,7 +262,7 @@
     "        freq_of_ins_ds_count_bins[cbin] = 0\n",
     "    freq_of_ins_ds_count_bins[cbin] += 1\n",
     "    \n",
-    "player_ds = [len(ins_follow['player_steps'][idx]) for idx in ins_follow.index]\n",
+    "player_ds = [len(task['player_path']) for task in ins_follow]\n",
     "freq_of_player_ds_count_bins = {}\n",
     "for c in player_ds:\n",
     "    cbin = c // bin_size\n",
@@ -309,7 +309,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: human performance on the instruction following task based on official R2R metrics."
+   ]
   },
   {
    "cell_type": "code",
