adds extraction for question asking and question answering axuiliary tasks

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,9 @@
     "    \n",
     "# Output metadata.\n",
     "games_fn = '../tasks/dialog_navigation/all.json'\n",
-    "instruction_following_dir = '../tasks/instruction_following/'"
+    "instruction_following_dir = '../tasks/instruction_following/'\n",
+    "question_asking_dir = '../tasks/question_asking/'\n",
+    "question_answering_dir = '../tasks/question_answering/'"
    ]
   },
   {
@@ -756,9 +758,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 334,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote 53 instances to '../tasks/instruction_following/train.json'\n",
+      "Wrote 53 instances to '../tasks/question_asking/train.json'\n",
+      "Wrote 53 instances to '../tasks/question_answering/train.json'\n",
+      "Wrote 3 instances to '../tasks/instruction_following/val_seen.json'\n",
+      "Wrote 3 instances to '../tasks/question_asking/val_seen.json'\n",
+      "Wrote 3 instances to '../tasks/question_answering/val_seen.json'\n",
+      "Wrote 9 instances to '../tasks/instruction_following/val_unseen.json'\n",
+      "Wrote 9 instances to '../tasks/question_asking/val_unseen.json'\n",
+      "Wrote 9 instances to '../tasks/question_answering/val_unseen.json'\n",
+      "Wrote 19 instances to '../tasks/instruction_following/test.json'\n",
+      "Wrote 19 instances to '../tasks/question_asking/test.json'\n",
+      "Wrote 19 instances to '../tasks/question_answering/test.json'\n"
+     ]
+    }
+   ],
    "source": [
     "# Carve out the Instruction Following task.\n",
     "ins_follow = pd.DataFrame(columns=[\"game_idx\",  # meta - the game dialog from which this was extracted.\n",
@@ -771,6 +792,25 @@
     "                                   \"planner_path\",  # output - the planner sequence steps shown to the oracle.\n",
     "                                   \"player_path\",  # output - the steps the navigator actually took.\n",
     "                                  ])\n",
+    "q_asking = pd.DataFrame(columns=[\"game_idx\",  # meta - the game dialog from which this was extracted.\n",
+    "                                 \"scan\",  # setting - the house the task takes place in.\n",
+    "                                 \"target\",  # setting - the target object for the task.\n",
+    "                                 \"start_pano\",  # setting - the starting pano and camera angles for navigation.\n",
+    "                                 \"dialog_history\",  # input - dialog history so far.\n",
+    "                                 \"nav_history\",  # input - navigation pano steps so far.\n",
+    "                                 \"nav_camera\",  # input - camera movements at last pano up to question.\n",
+    "                                 \"nav_question\",  # output - the question the navigator asked at this step.\n",
+    "                                ])\n",
+    "q_answering = pd.DataFrame(columns=[\"game_idx\",  # meta - the game dialog from which this was extracted.\n",
+    "                                    \"scan\",  # setting - the house the task takes place in.\n",
+    "                                    \"target\",  # setting - the target object for the task.\n",
+    "                                    \"start_pano\",  # setting - the starting pano and camera angles for navigation.\n",
+    "                                    \"dialog_history\",  # input - dialog history so far.\n",
+    "                                    \"nav_history\",  # input - navigation pano steps so far.\n",
+    "                                    \"nav_camera\",  # input - camera movements at last pano up to question.\n",
+    "                                    \"planner_path\",  # input - the planner sequence steps shown to the oracle.\n",
+    "                                    \"oracle_answer\",  # output - the answer the oracle gave\n",
+    "                                ])\n",
     "\n",
     "for idx in games.index:\n",
     "    if not games['success'][idx]:\n",
@@ -820,14 +860,55 @@
     "                                            \"planner_path\": planner_steps,\n",
     "                                            \"player_path\": player_steps,\n",
     "                                           }, ignore_index=True)\n",
+    "            q_asking = q_asking.append({\"game_idx\": idx,\n",
+    "                                        \"scan\": games['scan'][idx],\n",
+    "                                        \"target\": games['target'][idx],\n",
+    "                                        \"start_pano\": start_pano,\n",
+    "                                        # strip nav q & oracle ans.\n",
+    "                                        \"dialog_history\": dialog_history[:-2],\n",
+    "                                        \"nav_history\": nav_steps,\n",
+    "                                        \"nav_camera\": nav_camera,\n",
+    "                                        # target is the nav q asked here.\n",
+    "                                        \"nav_question\": dialog_history[-2]['message'],\n",
+    "                                       }, ignore_index=True)\n",
+    "            q_answering = q_answering.append({\"game_idx\": idx,\n",
+    "                                              \"scan\": games['scan'][idx],\n",
+    "                                              \"target\": games['target'][idx],\n",
+    "                                              \"start_pano\": start_pano,\n",
+    "                                              # strip oracle ans from input.\n",
+    "                                              \"dialog_history\": dialog_history[:-1],\n",
+    "                                              \"nav_history\": nav_steps,\n",
+    "                                              \"nav_camera\": nav_camera,\n",
+    "                                              \"planner_path\": planner_steps,\n",
+    "                                              # target is oracle answer.\n",
+    "                                              \"oracle_answer\": dialog_history[-1]['message'],\n",
+    "                                           }, ignore_index=True)\n",
     "\n",
     "# Write task data to human-readable JSON files.\n",
     "for fold in r2r_data_folds:\n",
     "    d = [{c: ins_follow[c][idx] for c in ins_follow.keys()}\n",
     "         for idx in ins_follow.index\n",
     "         if ins_follow[\"game_idx\"][idx] in folds_to_games[fold]]\n",
-    "    with open(os.path.join(instruction_following_dir, \"%s.json\" % fold), 'w') as f:\n",
-    "        json.dump(d, f, indent=2)"
+    "    fn = os.path.join(instruction_following_dir, \"%s.json\" % fold)\n",
+    "    with open(fn, 'w') as f:\n",
+    "        json.dump(d, f, indent=2)\n",
+    "    print(\"Wrote %d instances to '%s'\" % (len(d), fn))\n",
+    "        \n",
+    "    d = [{c: q_asking[c][idx] for c in q_asking.keys()}\n",
+    "         for idx in q_asking.index\n",
+    "         if q_asking[\"game_idx\"][idx] in folds_to_games[fold]]\n",
+    "    fn = os.path.join(question_asking_dir, \"%s.json\" % fold)\n",
+    "    with open(fn, 'w') as f:\n",
+    "        json.dump(d, f, indent=2)\n",
+    "    print(\"Wrote %d instances to '%s'\" % (len(d), fn))\n",
+    "\n",
+    "    d = [{c: q_answering[c][idx] for c in q_answering.keys()}\n",
+    "         for idx in q_answering.index\n",
+    "         if q_answering[\"game_idx\"][idx] in folds_to_games[fold]]\n",
+    "    fn = os.path.join(question_answering_dir, \"%s.json\" % fold)\n",
+    "    with open(fn, 'w') as f:\n",
+    "        json.dump(d, f, indent=2)\n",
+    "    print(\"Wrote %d instances to '%s'\" % (len(d), fn))"
    ]
   },
   {
